[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Matúš Mrekaj <matus.mrekaj@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hex = "0.4.2"
static_assertions = "0.2.3"
rust-crypto = "0.2.36"
rand = "0.7"
rand_core = "0.5.1"
serde = "1.0.118"
serde_json = "1.0"
rocket = "0.4.6"
num-integer = "0.1.42"
num-traits = "0.2.11"
num-bigint = { version = "0.3", features = ["rand"] }